--- a/app/styles/components/_page-actions.scss
+++ b/app/styles/components/_page-actions.scss
@@ -1,5 +1,9 @@
 .page-actions {
   display: flex;
   justify-content: flex-end;
-  padding: 1rem 2rem 0 0;
+  padding: 5px;
+
+  a {
+  	color: white;
+  }
 }
