--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,8 +6,9 @@
 // @include foundation-everything;
 
 // Components
-@import "components/callout-auth";
 @import "components/container";
-@import "components/page-actions";
+@import "components/nav";
+@import "components/page_actions";
+@import "components/callout-auth";
 @import "components/page-title";
 @import "components/todo";
