--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -3,3 +3,5 @@ $grey: #333333;
 $light-grey: #fafafa;
 $light-grey-border: #eeeeee;
 $light-color: #aaa;
+$nav-background: $grey;
+$nav-text-color: white;
